[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["Prasad Chalasani <pchalasani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langroid = {version="^0.1.222", extras = ["hf-embeddings", "unstructured"]}
pytest = "^7.3.1"
grpcio = "^1.62.0"
anyio = "^4.3.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
trio = "^0.24.0"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
